Texy preview link typo FIX

--- a/app/MemberModule/templates/Forum.view.latte
+++ b/app/MemberModule/templates/Forum.view.latte
@@ -14,7 +14,7 @@
 //<![CDATA[
 $.texyla.setDefaults({
 	baseDir: {$basePath}+'/texyla',
-	previewPath: {link forumTexyPreview}
+	previewPath: {link texyPreview}
 });
 
 $(function () {
