Change page base title to from "VZS member database"  to "VZS Jablonec"

--- a/app/MemberModule/templates/Sign.@layout.latte
+++ b/app/MemberModule/templates/Sign.@layout.latte
@@ -5,16 +5,16 @@
   <meta http-equiv="content-language" content="cs">
   <meta name="viewport" content="initial-scale=1, width=device-width"/>
   <link rel="shortcut icon" href="{$basePath}/img/fav.ico" type="image/x-icon">
-  <title>Přihlášení | VZS - members' database</title>
+  <title>Přihlášení | VZS Jablonec</title>
   <link rel="stylesheet" href="{$basePath}/css/main.css" type="text/css">
   <script src="{$basePath}/js/jquery.min.js" type="text/javascript"></script>
   <script src="{$basePath}/js/jquery.nette.js" type="text/javascript"></script>
   <script src="{$basePath}/js/netteForms.js" type="text/javascript"></script>
   <style type="text/css" media="screen" n:syntax="off">
   <!--
-  table {margin: 0px auto; text-align: left;}
-  #hlavni {max-width: 30em; margin: 0px auto; text-align: center;}
-  #nahore {height: 95px; margin: 1em auto 1em auto; padding: 0px 4em; overflow: hidden;}
+  table { margin: 0px auto; text-align: left; }
+  #hlavni { max-width: 30em; margin: 0px auto; text-align: center; }
+  #nahore { height: 95px; margin: 1em auto 1em auto; padding: 0px 4em; overflow: hidden; }
   //-->
   </style>
   {block #head}{/block}
