--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -25,7 +25,7 @@
   <script src="{$baseUri}/js/netteForms.js" type="text/javascript"></script>
   <script src="{$baseUri}/js/jquery.ajaxform.js" type="text/javascript"></script>
 
-  <title>{if isset($title)}{$title} | {/if}{block #title|striptags|trim}{/block} | VZS - members' database</title>
+  <title>{if isset($title)}{$title} | {/if}{block #title|striptags|trim}{/block} | VZS Jablonec</title>
   {block #head}{/block}
 </head>
 <body>
