--- a/app/PhotoModule/templates/@layout.latte
+++ b/app/PhotoModule/templates/@layout.latte
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="{$baseUri}/css/ie.css" type="text/css">
   <![endif]-->
 
-  <link rel="alternate" title="VZS Jablonec Member Fotogalerie" n:href="//Feed:albums" type="application/rss+xml" n:if="$user->isLoggedIn()">
+  <link rel="alternate" title="VZS Jablonec Fotogalerie" n:href="//Feed:albums" type="application/rss+xml" n:if="$user->isLoggedIn()">
 
   <script src="{$baseUri}/js/jquery.min.js" type="text/javascript"></script>
 
