Remove unused form

--- a/app/MemberModule/templates/Dokumenty.add.latte
+++ b/app/MemberModule/templates/Dokumenty.add.latte
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="{$basePath}/css/jquery-ui.custom.css" type="text/css">
 
 <style type="text/css" n:syntax="off">
-h2 {margin-top: 1em;}
-#ui-datepicker-div {font-size: 0.9em;}
+h2 { margin-top: 1em; }
+#ui-datepicker-div { font-size: 0.9em; }
 </style>
 
 <script type="text/javascript" src="{$basePath}/js/jquery-ui.custom.min.js"></script>
@@ -28,9 +28,9 @@ h2 {margin-top: 1em;}
 
 {control addZapisForm}
 
-<h2>Aktualizovat soubor s hlasováním</h2>
+{*<h2>Aktualizovat soubor s hlasováním</h2>*}
 
-{control addHlasovaniForm}
+{*{control addHlasovaniForm}*}
 
 <h2>Nahrání nového dokumentu</h2>
 
