--- a/www/subdom/member/css/myfont.css
+++ b/www/subdom/member/css/myfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'myfont';
-  src: url('../font/myfont.eot?8368321');
-  src: url('../font/myfont.eot?8368321#iefix') format('embedded-opentype'),
-       url('../font/myfont.svg?8368321#myfont') format('svg'),
-       url('../font/myfont.woff2?8368321') format('woff2'),
-       url('../font/myfont.woff?8368321') format('woff'),
-       url('../font/myfont.ttf?8368321') format('truetype');
+  src: url('../font/myfont.eot?73970895');
+  src: url('../font/myfont.eot?73970895#iefix') format('embedded-opentype'),
+       url('../font/myfont.woff2?73970895') format('woff2'),
+       url('../font/myfont.woff?73970895') format('woff'),
+       url('../font/myfont.ttf?73970895') format('truetype'),
+       url('../font/myfont.svg?73970895#myfont') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'myfont';
-    src: url('../font/myfont.svg?8368321#myfont') format('svg');
+    src: url('../font/myfont.svg?73970895#myfont') format('svg');
   }
 }
 */
@@ -66,9 +66,11 @@
 .icon-eye-off:before { content: '\e808'; } /* '' */
 .icon-tag:before { content: '\e809'; } /* '' */
 .icon-ok-circled:before { content: '\e80a'; } /* '' */
+.icon-folder:before { content: '\e80b'; } /* '' */
 .icon-ok:before { content: '\e80c'; } /* '' */
 .icon-cancel:before { content: '\e80d'; } /* '' */
 .icon-cancel-circled:before { content: '\e80e'; } /* '' */
+.icon-folder-open:before { content: '\e80f'; } /* '' */
 .icon-calendar:before { content: '\e810'; } /* '' */
 .icon-link:before { content: '\e811'; } /* '' */
 .icon-attach:before { content: '\e812'; } /* '' */
@@ -103,6 +105,8 @@
 .icon-doc-text:before { content: '\f0f6'; } /* '' */
 .icon-quote-left:before { content: '\f10d'; } /* '' */
 .icon-quote-right:before { content: '\f10e'; } /* '' */
+.icon-folder-empty:before { content: '\f114'; } /* '' */
+.icon-folder-open-empty:before { content: '\f115'; } /* '' */
 .icon-unlink:before { content: '\f127'; } /* '' */
 .icon-calendar-empty:before { content: '\f133'; } /* '' */
 .icon-lock-open-alt:before { content: '\f13e'; } /* '' */
