--- a/app/MemberModule/templates/Forum.topic.latte
+++ b/app/MemberModule/templates/Forum.topic.latte
@@ -10,16 +10,8 @@
 {control texylaJs}
 
 <style type="text/css" n:syntax="off">
-{*.headerLike {margin: 0px; padding: 0px 1em 0.5ex 1em; display: inline-block;} *}
-{*.borderLike {border-left: none; border-right: none; border-bottom: none;}*}
-
-{*table#items td, table th {vertical-align: top; padding: 1ex 1ex;}*}
-{*table#items td.col {padding: 0px;}*}
-{*table#items .right .headerLike {font-style: italic; text-align: center;}*}
-{*table#items .first {font-size: 1.1em;}*}
-
-{*#frm-addTopicForm-title:-moz-placeholder { color: silver; }*}
-{*#frm-addTopicForm-title::-webkit-placeholder { color: silver; }*}
+	.inline-nav { list-style-type: none; padding: 0; margin-bottom: 1ex; }
+	.inline-nav li { display: inline; font-size: inherit; }
 </style>
 
 <script type="text/javascript">
