New forum search method

--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -188,7 +188,7 @@ class="hint">Čas na přihlášení vypršel</span></p>
 <li>» <a n:href="Forum:view $topic->id">{$topic->title|firstUpper}</a></li>
 </ul>
 
-{control postsList $akce->forum_topic_id}
+{control postsList}
 {/if}
 
 {/block}
