Feeds RSS fix due to new password hash and RSS title improvment

--- a/app/MemberModule/templates/Akce.default.latte
+++ b/app/MemberModule/templates/Akce.default.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="alternate" title="VZS Jablonec Member Akce" n:href="//Feed:akce" type="application/rss+xml">
+<link rel="alternate" title="VZS Jablonec Akce" n:href="//Feed:akce" type="application/rss+xml">
 <style type="text/css" n:syntax="off">
 #text { padding-top: 0; }
 
