--- a/app/MemberModule/templates/Feed.akce.latte
+++ b/app/MemberModule/templates/Feed.akce.latte
@@ -1,6 +1,6 @@
 {contentType application/rss+xml; charset=utf-8}
 {block #content}
-<title>VZS Jablonec Member Akce</title>
+<title>VZS Jablonec Akce</title>
 <link>{link //Akce:default}</link>
 <description>Forum členů VZS Jablonec</description>
 <item n:foreach="$items as $item">
