--- a/app/MemberModule/templates/Feed.albums.latte
+++ b/app/MemberModule/templates/Feed.albums.latte
@@ -1,6 +1,6 @@
 {contentType application/xml; charset=utf-8}
 {block #content}
-<title>VZS Jablonec Member Fotogalerie</title>
+<title>VZS Jablonec Fotogalerie</title>
 <link>http://photo.vzs-jablonec.cz/album/</link>
 <description>Fotogalerie členů VZS Jablonec</description>
 <item n:foreach="$items as $item">
