--- a/app/MemberModule/templates/Feed.ankety.latte
+++ b/app/MemberModule/templates/Feed.ankety.latte
@@ -1,6 +1,6 @@
 {contentType application/rss+xml; charset=utf-8}
 {block #content}
-<title>VZS Jablonec Member Ankety</title>
+<title>VZS Jablonec Ankety</title>
 <link>{link //Ankety:default}</link>
 <description>Ankety členů VZS Jablonec</description>
 <item n:foreach="$items as $item">
