--- a/app/MemberModule/templates/Feed.hlasovani.latte
+++ b/app/MemberModule/templates/Feed.hlasovani.latte
@@ -1,6 +1,6 @@
 {contentType application/rss+xml; charset=utf-8}
 {block #content}
-<title>VZS Jablonec Member Hlasování představenstva</title>
+<title>VZS Jablonec Hlasování</title>
 <link>{link //Hlasovani:default}</link>
 <description>Hlasování představenstva MS VZS Jablonec</description>
 <item n:foreach="$items as $item">
