--- a/app/MemberModule/templates/Forum.topic.latte
+++ b/app/MemberModule/templates/Forum.topic.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="alternate" title="VZS Jablonec Member Forum : {$forum->title}" n:href="//Feed:forum, fid => $forum->id" type="application/rss+xml">
+<link rel="alternate" title="VZS Jablonec Forum : {$forum->title}" n:href="//Feed:forum, fid => $forum->id" type="application/rss+xml">
 
 <link rel="stylesheet" href="{$basePath}/css/forum.css" type="text/css">
 
