--- a/app/MemberModule/templates/Forum.view.latte
+++ b/app/MemberModule/templates/Forum.view.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="alternate" title="VZS Jablonec Member Forum : {$topic->title}" n:href="//Feed:forum, tid => $topic->id" type="application/rss+xml">
+<link rel="alternate" title="VZS Jablonec Forum : {$topic->title}" n:href="//Feed:forum, tid => $topic->id" type="application/rss+xml">
 
 <link rel="stylesheet" href="{$basePath}/css/forum.css" type="text/css">
 
