Add support for search topics by make topic list component

--- a/app/MemberModule/templates/Forum.default.latte
+++ b/app/MemberModule/templates/Forum.default.latte
@@ -5,6 +5,7 @@
 
 <style type="text/css" n:syntax="off">
 	table#items { margin-top: 1em; }
+	.title a:hover { color: white; }
 </style>
 {/block}
 
