New method of search in forum, new search page, search form in each topic and forum category

--- a/app/MemberModule/templates/Forum.search.latte
+++ b/app/MemberModule/templates/Forum.search.latte
@@ -10,8 +10,8 @@
 
 <h2>Hledání ve fóru</h2>
 
-{form searchForm}
-<p>{input q autofocus => TRUE} {input ok} {label forum_id /} {input forum_id} {label subject /} {input subject}</p>
+{form searchForumForm}
+<p>{input q autofocus => TRUE} {label forum_id /} {input forum_id} {label subject /} {input subject} {input ok}</p>
 {/form}
 
 {*<div class="right">{control vp}</div>*}
