--- a/app/components/PostsListControl.latte
+++ b/app/components/PostsListControl.latte
@@ -15,7 +15,7 @@
         </div>
 
         <div class="message">
-            {if !$search}{$post->text|texy|noescape}{else}{$post->text|replace:$search:'<span class="highlight">'.$search.'</span>'|texy|noescape}{/if}
+            {if !$search}{$post->text|texy|noescape}{else}{$post->text|replace:$search:'*'.$search.' .[highlight]*'|texy|noescape}{/if}
         </div>
 
         {var $isTopic = ($post->id == $post->forum_topic_id)}
