--- a/www/subdom/member/css/forum.css
+++ b/www/subdom/member/css/forum.css
@@ -13,5 +13,8 @@ table#items .count, table#items .author, table#items .post {padding: 0 1ex;}
 #frm-addPostForm table { width: 100%; margin: 0 auto; }
 #frm-addPostForm table td textarea { width: 100% }
 
+.inline-nav { list-style-type: none; padding: 0; margin-bottom: 1ex; line-height: 2em;}
+.inline-nav li { display: inline; font-size: inherit; }
+
 .paginator {line-height: 2em;}
 .paginator .buttonLike {line-height: 1.2em;}
