Change class float_rgiht to float-rgiht and float_left to float-left due to css naming compatibility

--- a/app/MemberModule/templates/Akce.default.latte
+++ b/app/MemberModule/templates/Akce.default.latte
@@ -97,7 +97,7 @@ $akce->date_add > $user->getIdentity()->date_last ? 'new',
 {/foreach}
 {/foreach}
 <p>
-<a n:href="Feed:akce" class="buttonLike float_right"><span class="icon-rss char"></span> RSS Akce</a>
+<a n:href="Feed:akce" class="buttonLike float-right"><span class="icon-rss char"></span> RSS Akce</a>
 
 {if $all}
 	<a class="buttonLike" n:href="Akce:default, false"><span class="icon-ok"></span> Zobrazit jen akce z letošního roku</a>
