--- a/app/MemberModule/templates/Forum.default.latte
+++ b/app/MemberModule/templates/Forum.default.latte
@@ -55,7 +55,7 @@
 {/foreach}
 </table>
 
-<p class="float_right">
+<p class="float-right">
 	<a n:href="Feed:forum" class="buttonLike"><span class="icon-rss"></span> RSS celého fóra</a>
 </p>
 
