--- a/app/MemberModule/templates/Forum.topic.latte
+++ b/app/MemberModule/templates/Forum.topic.latte
@@ -27,7 +27,7 @@ $(function () {
 
 {block #content}
 
-<div class="float_right" id="nav-top">{control vp}</div>
+<div class="float-right" id="nav-top">{control vp}</div>
 
 <ul class="inline-nav">
 	<li><a n:href="Forum:">Fórum</a></li>
