--- a/app/MemberModule/templates/Forum.view.latte
+++ b/app/MemberModule/templates/Forum.view.latte
@@ -29,7 +29,7 @@ $(function () {
 <h1 n:block="title">Fórum</h1>
 
 {block #content}
-<div class="float_right">{control vp}</div>
+<div class="float-right">{control vp}</div>
 
 <ul class="inline-nav">
 	<li><a n:href="Forum:">Fórum</a></li>
