--- a/app/MemberModule/templates/Sign.@layout.latte
+++ b/app/MemberModule/templates/Sign.@layout.latte
@@ -22,8 +22,8 @@
   <body>   
   <div id="hlavni">
   <div id="nahore">
-    <img class="float_left" src="{$basePath}/img/vzs.png" alt="Vodní záchranná služba ČČK" width="95" height="95">
-    <img class="float_right" src="{$basePath}/img/jbc.png" alt="VZS Jablonec nad Nisou" width="95" height="95">
+    <img class="float-left" src="{$basePath}/img/vzs.png" alt="Vodní záchranná služba ČČK" width="95" height="95">
+    <img class="float-right" src="{$basePath}/img/jbc.png" alt="VZS Jablonec nad Nisou" width="95" height="95">
   </div>
     {include #content}
   </div>
