--- a/app/MemberModule/templates/Mail.default.latte
+++ b/app/MemberModule/templates/Mail.default.latte
@@ -54,9 +54,9 @@ input.buttonLike:active {background-color: #da251c; color: white; background-ima
 <tr><th>{label to /}</th><td class="no-wrap">{input to} {if !isset($isAkce)}{input open}{/if}</td></tr>
 <tr><td colspan="2">
 <fieldset id="adresati" class="hide" n:inner-foreach="$form['users']->containers as $id => $user">
-    {if $iterator->isFirst()}<div class="float_left">{/if}
+    {if $iterator->isFirst()}<div class="float-left">{/if}
     <div class="label">{input users-$id-mail} {label users-$id-mail /}</div>
-    {if !($iterator->getCounter()%$pocet)} </div><div class="float_left"> {/if}
+    {if !($iterator->getCounter()%$pocet)} </div><div class="float-left"> {/if}
 	{if $iterator->isLast()}</div><p><i>Pro výběr všech položek využijte klávesovou zkratku Ctrl + A</i></p>{/if}
 </fieldset>
 </td></tr>
