--- a/www/subdom/member/css/main.css
+++ b/www/subdom/member/css/main.css
@@ -41,8 +41,8 @@ width: 100%; display: block; color: white; font-weight: bold; padding: 0.1ex 0.1
 
 .left {text-align: left;}
 .right {text-align: right;}
-.float_right {float: right;}
-.float_left {float: left;}
+.float-right {float: right;}
+.float-left {float: left;}
 .center {text-align: center;}
 .no-wrap {white-space: nowrap;}
 .clearfix {clear: both;}
