--- a/app/MemberModule/templates/Forum.topic.latte
+++ b/app/MemberModule/templates/Forum.topic.latte
@@ -35,20 +35,19 @@ $(function () {
 </ul>
 
 <div>
-	{form searchForm}{input q}{input ok}{/form}
+	{control searchForm}
 </div>
-
 
 {control topicList}
 
 <div class="right">{control vp}</div>
 
-<p class="float_right">
-<a n:href="Feed:forum, fid => $forum->id" class="buttonLike"><span class="icon-rss"></span> RSS této kategorie</a>
+<p class="float-right">
+	<a n:href="Feed:forum, fid => $forum->id" class="buttonLike"><span class="icon-rss"></span> RSS této kategorie</a>
 </p>
 
 <p>
-<a n:href="search,null,$forum->id" class="buttonLike"><span class="icon-search"></span> Hledat ve fóru</a>
+	<a n:href="search,null,$forum->id" class="buttonLike"><span class="icon-search"></span> Hledat ve fóru</a>
 </p>
 
 <h2>Nové téma</h2>
