--- a/app/MemberModule/templates/Forum.view.latte
+++ b/app/MemberModule/templates/Forum.view.latte
@@ -37,18 +37,18 @@ $(function () {
 	<li>» {$topic->title|firstUpper}</li>
 </ul>
 
-<div class="float_right">
-	{form searchForm}{input q}{input ok}{/form}
+<div class="float-right">
+	{control searchForm}
 </div>
 
-<h2><span class="icon-lock" title="Toto téma bylo uzavřeno" n:if="$topic->locked"></span> {$topic->title|firstUpper}</h2>
+<h2><span clas="no-wrap"><span class="icon-lock" title="Toto téma bylo uzavřeno" n:if="$topic->locked"></span> {$topic->title|firstUpper}</span></h2>
 
-{control postsList $topic->id}
+{control postsList}
 
 <div class="right">{control vp}</div>
 
 <p class="right">
-<a n:href="Feed:forum, tid => $topic->id" class="buttonLike"><span class="icon-rss"></span> RSS tohoto tématu</a>
+	<a n:href="Feed:forum, tid => $topic->id" class="buttonLike"><span class="icon-rss"></span> RSS tohoto tématu</a>
 </p>
 
 {if !$topic->locked}
