--- a/app/components/RatingControl.latte
+++ b/app/components/RatingControl.latte
@@ -56,7 +56,7 @@
                 <li n:foreach="$form->errors as $error">{$error}</li>
             </ul>
 
-            <div class="float_right">{input ok}</div>
+            <div class="float-right">{input ok}</div>
             <p>
                 <span id="stars">
                     <span id="check-star" n:inner-foreach="$form[rating]->items as $key => $label"><input n:name="rating:$key"><label n:name="rating:$key"></label></span>
