--- a/app/MemberModule/templates/Akce.default.latte
+++ b/app/MemberModule/templates/Akce.default.latte
@@ -23,7 +23,7 @@ table .first td { padding-top: 0.5ex; }
 {foreach $akceAllList as $old => $akceList}
 
 <h2 n:if="$akceList">
-    <span class="icon-calendar"></span> {if $iterator->isOdd()}Nastávající akce{else}Proběhlé akce {$now}{/if}
+    <span class="icon-calendar"></span> {if $iterator->isOdd()}Nastávající akce{else}Proběhlé akce {if !$all}{$year}{/if}{/if}
 </h2>
 
 {foreach $akceList as $akce}
@@ -100,8 +100,12 @@ $akce->date_add > $user->getIdentity()->date_last ? 'new',
 	<a n:href="Feed:akce" class="buttonLike float-right"><span class="icon-rss char"></span> RSS Akce</a>
 
 	<span class="buttonLike gray" n:tag-if="!$prev"><a n:tag-if="$prev" class="buttonLike" n:href="default, $prev"><span class="char">«</span> Předchozí</a></span>
-	<a n:foreach="$years as $year" n:tag-if="$year != $now" n:href="this, $year">{$year}</a>
+	<a n:foreach="$years as $y" n:tag-if="($all)or($year != $y)" n:href="this, $y">{$y}</a>
 	<span class="buttonLike gray" n:tag-if="!$next"><a n:tag-if="$next" class="buttonLike" n:href="default, $next">Další <span class="char">»</span></a></span>
+</p>
+
+<p n:if="!$all">
+	<a class="buttonLike" n:href="this, all"><span class="icon-ok char"></span> Zobrazit všechny akce</a>
 </p>
 
 
